# electric_fields_nitrogenase

./: LICENSE  README.md  environment.yml  run_subprocesses.py  setup.cfg
run_scripts/: analyze_electric_fields_amber.py
src/electric_fields/: __init__.py  amber_optimization.py  electric_field_quantification.py  enzyme_preparation_and_mutation_amber.py  final_plot_nitrogenase_quivers_html.py  fragment_extraction_amber.py  nearby_residue_identification.py  quantification_amoeba.py  quantification_txt.py
src/electric_fields.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/electric_fields/old/: enzyme_preparation_and_mutation.py  enzyme_preparation_and_mutation_amber.py  enzyme_preparation_and_mutation_amber_almost.py  final_plot_nitrogenase kopie.py  final_plot_nitrogenase_quivers.py  final_plot_nitrogenase_quivers_png.py  fragment_extraction.py  plot_generation.py
