
[metadata]
name = electric_fields
version = 1.0.1
license = MIT
description = Code to analyze local electric fields around the active site of (nitrogenase) enzymes
long_description = file: README.md
author = Thijs Stuyver
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src